refactor: update index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       alt=""
     />
     <h1>Starter Kit</h1>
-    <p>For Your Own HTML, CSS, JS Templates</p>
+    <p>For Your Own Templates</p>
   </body>
 </html>
