--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gulp - Starter Kit</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
+@include('assets/html/header.html')
+
+<div class="container">
+  <div class="content">
+    <img
+      src="assets/images/gulp.svg"
+      alt=""
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
-  <body>
+    <h1>Starter Kit</h1>
+    <p>For Your Own Templates</p>
+  </div>
+  <ul>
+    <li><a href="https://github.com/pwndex/gulp-starter-kit/" target="_blank">View on GitHub</a></li>
+  </ul>
+  <div class="footer">
+    <p>Made with &hearts; by <a href="https://pwndex.github.io/" target="_blank">pwndex</a></p>
+  </div>
+  <div id="particles-js" class="particlesjs"></div>
+</div>
 
-    <div class="container">
-      <img
-        src="assets/images/gulp.svg"
-        alt=""
-      />
-      <h1>Starter Kit</h1>
-      <p>For Your Own Templates</p>
-      <ul>
-        <li><a href="https://pwndex.github.io/" target="_blank">My Website</a></li>
-        <li><a href="https://github.com/pwndex/" target="_blank">My Github</a></li>
-        <li><a href="https://github.com/pwndex/gulp-starter-kit/" target="_blank">Gulp Starter Kit</a></li>
-      </ul>
-    </div>
-
-    <script src="assets/js/all.js"></script>
-  </body>
-</html>
+@include('assets/html/footer.html')
