refactor: update project example ui

--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,24 @@
 @include('assets/html/header.html')
 
 <section class="header-section">
+  <div class="header-section__inner">
+    
+    <div class="header-section__content">
+      <img
+        src="assets/images/gulp.svg"
+        alt=""
+        class="header-section__image"
+      />
+      <h1 class="header-section__title">Starter Kit</h1>
+      <p class="header-section__subtitle">For Your Own Templates</p>
+      <a href="https://github.com/pwndex/gulp-starter-kit/" target="_blank" class="header-section__main-link">View on GitHub</a>
+    </div>
 
-  <div class="header-section__content">
-    <img
-      src="assets/images/gulp.svg"
-      alt=""
-      class="header-section__image"
-    />
-    <h1 class="header-section__title">Starter Kit</h1>
-    <p class="header-section__subtitle">For Your Own Templates</p>
+    <p class="header-section__footer">
+      Made with &hearts; by <a href="https://pwndex.github.io/" target="_blank" class="header-section__footer-link">pwndex</a>
+    </p>
+
   </div>
-
-  <a href="https://github.com/pwndex/gulp-starter-kit/" target="_blank" class="header-section__main-link">View on GitHub</a>
-
-  <p class="header-section__footer">
-    Made with &hearts; by <a href="https://pwndex.github.io/" target="_blank" class="header-section__footer-link">pwndex</a>
-  </p>
-
 </section>
 
 <div id="particles-js" class="particlesjs"></div>
